src/style.css
@font-face {
	font-family: "Pagella";
	src: url("/fonts/texgyrepagella-regular.otf") format("opentype");
	font-weight: 400;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: "Pagella";
	src: url("/fonts/texgyrepagella-italic.otf") format("opentype");
	font-weight: 400;
	font-style: italic;
}

@font-face {
	font-family: "Pagella";
	src: url("/fonts/texgyrepagella-bold.otf") format("opentype");
	font-weight: 700;
	font-style: normal;
}

@font-face {
	font-family: "Pagella";
	src: url("/fonts/texgyrepagella-bolditalic.otf") format("opentype");
	font-weight: 700;
	font-style: italic;
}

body {
	margin: 0;
	background-color: #000;
	color: #fff;
	font-family: "Pagella", "Palatino Linotype", Palatino, serif;
	font-size: 18px;
	scrollbar-color: rgb(99, 169, 173) rgba(0, 0, 0, 0.221);
}

html, body {
	overscroll-behavior: none;
	touch-action: none;
	overflow: hidden;
}

button {
  	font-family: "Pagella", "Palatino Linotype", Palatino, serif;
}

a:link {
	color: #9bfff7;
}

a:visited {
	color: #5a52d7;
}

#fade {
	background-color: rgb(0, 0, 0);
	transition: opacity 1s ease;
	position: absolute;
	inset: 0;
	pointer-events: none;
}

#three {
	width: 100vw;
	height: 100vh;
	overflow: hidden;
	overscroll-behavior: none;
	touch-action: none;
}

/* page */
#page {
	position: fixed;
	inset: 0;
	background-color: rgba(0, 0, 0, 0.5);
	transition: opacity 0.5s ease;
	opacity: 0;
	display: flex;
	justify-content: center;
	align-items: center;
}

#page-panel {
	display: flex;
	flex-direction: column;
	height: 100%;
	width: min(100%, 1100px);
	transition: transform 0.5s ease; /* smooth animation */
	transform: translateY(50px);
	box-sizing: border-box;
	padding: 10px 0 10px 0;
	margin: 0px;
}

#page-top-bar {
	height: 50px;
	min-height: 50px;
	background: linear-gradient(
		45deg,
		rgba(173, 164, 99, 0.6) 20%,
		rgba(99, 169, 173, 0.6) 80%
	);
	border-radius: 5px;
	display: flex;
	align-items: center;
	justify-content: center;
	position: relative;
}

#page-close-parent {
	height: 100%;
	width: 100%;
	position: absolute;
	display: flex;
	justify-content: flex-start;
}

#page-close {
	aspect-ratio: 1;
	display: flex;
	align-items: center;
	justify-content: center;
	color: white;
	border-radius: 3px;
	background-color: rgba(0, 0, 0, 0.3);
	border-style: none;
}

#page-close:hover {
	background-color: rgba(0, 0, 0, 0.6);
}

#page-project-tags {
	min-height: 15px;
	max-height: 15px;
	width: 100%;
	display: flex;
	justify-content: center;
	padding: 6px 0 4px 0;
	gap: 4px;
	background: linear-gradient(
		90deg,
		rgba(0, 0, 0, 0.9) 0%,
		rgb(53, 59, 35) 20%,
		rgb(35, 43, 59) 80%,
		rgba(0, 0, 0, 0.9) 100%
	);
}

#page-content-parent {
	flex-grow: 1;
	overflow-y: scroll;
	overflow-x: hidden;
	background-color: rgba(0, 0, 0, 0.9);
	padding: 0 20px 0 20px;
}

#page-content {
	text-align: center;
}

/* page elements */
h1, h2 {
	margin: 40px 0 40px 0;
}

h3 {
	margin: 30px 0 30px 0;
}

p {
	margin: 25px 0 25px 0;
}

img {
	margin: 30px 0 30px 0;
	width: 90%;
}

.landscape-media {
	aspect-ratio: 16/9;
	object-fit: cover;
}

/* content pairs */
.content-pair-left, .content-pair-right {
	width: 100%;
	margin: 20px 0 20px 0;
	display: flex;
	align-items: center;
	gap: 20px;
}

.content-pair-left {
	text-align: start;
}

.content-pair-right {
	text-align: end;
}

.content-pair-left > :first-child, .content-pair-right > :first-child {
	width: 40%;
	margin: 0;
}

.content-pair-right > :last-child {
	order: -1;
}

.content-pair-left > :last-child, .content-pair-right > :last-child {
	flex: 1;
}

@media (max-width: 600px) {
	.content-pair-left, .content-pair-right {
		gap: 0;
		text-align: center;
	}

	.content-pair-left, .content-pair-right {
		flex-direction: column;
	}

	.content-pair-left > :first-child, .content-pair-right > :first-child {
		width: 100%;
	}

	.content-pair-left > :last-child, .content-pair-right > :last-child {
		order: 1;
		margin-bottom: 40px;
	}
}

.video {
	border: 0px;
	margin: 20px 0 20px 0;
}

/* descripted items */
.descripted-item {
	width: 100%;
	margin: 20px 0 20px 0;
	text-align: center;
}

.descripted-item p {
	margin: 5px;
	font-style: italic;
	font-size: 16px;
}

.descripted-item > * {
	margin: 0;
}

/* text break */
.spacer {
	background: linear-gradient(
		90deg,
		rgba(0, 0, 0, 0) 0%,
		rgba(255, 255, 255, 1) 50%,
		rgba(0, 0, 0, 0) 100%
	);
	height: 2px;
	width: 100%;
	margin: 50px 0 50px 0;
}

/* carousel */
.content-carousel {
	position: relative;
}

/* carousel viewport */
.content-carousel > :first-child {
	display: flex;
	align-items: center;
	overflow: hidden;
}

/* carousel images */
.content-carousel > :first-child > :first-child > * {
	width: 100%;
	margin: 0;
	padding: 0;
}

/* carousel controls container */
.content-carousel > :first-child > :last-child {
	position: absolute;
	width: 100%;
	padding: 0;
	height: 40px;
	display: flex;
	align-items: center;
}

/* carousel controls */
.content-carousel > :first-child > :last-child > * {
	cursor: pointer;
	position: absolute;
	width: auto;
	padding: 10px;
	font-size: 18px;
	font-weight: bold;
	user-select: none;
	background-color: rgba(0, 0, 0, 0.2);
}

.content-carousel > :first-child > :last-child > *:hover {
	background-color: rgba(0, 0, 0, 0.8);
}

/* carousel left control */
.content-carousel > :first-child > :last-child > :first-child {
	left: 0px;
}

/* carousel right control */
.content-carousel > :first-child > :last-child > :last-child {
	right: -1px;
}

/* carousel dot container */
.content-carousel > :last-child {
	height: 30px;
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	gap: 5px;
}

/* carousel dots */
.content-carousel > :last-child > * {
	height: 30%;
	aspect-ratio: 1;
	border-radius: 50%;
	background-color: white;
	opacity: 0.2;
	transition: opacity 0.4s ease;
}

/* content row */
.content-row {
	position: relative;
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 15px;
	flex-wrap: wrap;
}

.content-row > * {
	flex: 1;
	min-width: 300px;
}

/* go to path links */
.go-to-path-link {
	-webkit-user-select: text;
	-moz-user-select: text;
	-ms-user-select: text;
	user-select: text;
	background-color: #8a2be2;
	border-style: none;
	border-radius: 2px;
	vertical-align: middle;
	color: white;
}

.go-to-path-link:hover {
	background-color: #6d20b5;
}

.go-to-path-link:active {
	background-color: #290d43;
}

/* tags */
.category-tag, .skill-tag {
	-webkit-user-select: text;
	-moz-user-select: text;
	-ms-user-select: text;
	user-select: text;
	border-style: none;
	border-radius: 2px;
	color: rgb(255, 255, 255);
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 3px;
	font-size: 12px;
}

.category-tag {
	background-color: rgba(173, 164, 99);
}

.category-tag:hover {
	background-color: #876b17;
}

.category-tag:active {
	background-color: #3c2f0f;
}

.skill-tag {
	background-color: rgb(99, 169, 173);
}

.skill-tag:hover {
	background-color: #255e9a;
}

.skill-tag:active {
	background-color: #0f253c;
}

/* tutorial */
#tutorial {
	position: absolute;
	pointer-events: none;
	width: 100%;
	top: 50%;
	opacity: 0;
	margin: 0;
}

#tutorial p {
	font-size: 30px;
	text-shadow: #85fff5 0 0 20px;
	text-align: center;
	width: 100%;
	margin: 0;
	padding: 0;
	user-select: none;
}

/* demo button */
@property --rotate {
  syntax: '<angle>';
  initial-value: 0deg;
  inherits: false;
}

@keyframes rotate-gradient {
  from {
    --rotate: 0deg;
  }
  to {
    --rotate: 360deg;
  }
}

.demo-button {
	padding: 5px 80px;
	color: black !important;
	font-size: 40px;
	border-radius: 5px;
    background: linear-gradient(
		var(--rotate),
		rgb(213, 46, 255) 0%,
		rgb(198, 203, 160) 50%,
		rgb(99, 169, 173) 100%
	);
	background-size: 120% 400%;
	background-position: center;
    text-decoration: none;
	animation: rotate-gradient;
	animation-duration: 4s;
	animation-timing-function: linear;
	animation-iteration-count: infinite;
}

